fix: width of skills section narrow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@ footer {
     margin-bottom: 2rem;
 }
 
-.col-6 {
+.col-5 {
     font-size: 1.2rem; 
 }
 
